# ray_tracing_cpp

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json
src/: camera.cpp  camera.hpp  hit.hpp  main.cpp  material.hpp  material_dielectric.cpp  material_dielectric.hpp  material_lambertian.cpp  material_lambertian.hpp  material_metal.cpp  material_metal.hpp  ray.hpp  sphere.hpp  utils.cpp  utils.hpp  vec3.hpp
